# practica-calificada-4-AlvaroGuerreroJ

./: .gitignore  CMakeLists.txt
src/: coordinate_generator.cpp  coordinate_generator.hpp  main.cpp  util.cpp  util.hpp
